FIN Login Register

--- a/appExa/appExa/appExa.csproj
+++ b/appExa/appExa/appExa.csproj
@@ -52,6 +52,9 @@
         </ApplicationDefinition>
         <Compile Include="Articulo.cs" />
         <Compile Include="Compra.cs" />
+        <Compile Include="Registro.xaml.cs">
+          <DependentUpon>Registro.xaml</DependentUpon>
+        </Compile>
         <Compile Include="Ventana1.xaml.cs">
           <DependentUpon>Ventana1.xaml</DependentUpon>
         </Compile>
@@ -67,6 +70,7 @@
             <DependentUpon>MainWindow.xaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
+        <Page Include="Registro.xaml" />
         <Page Include="Ventana1.xaml" />
     </ItemGroup>
     <ItemGroup>
