--- a/appExa/appExa/appExa.csproj
+++ b/appExa/appExa/appExa.csproj
@@ -52,6 +52,7 @@
         </ApplicationDefinition>
         <Compile Include="Articulo.cs" />
         <Compile Include="Compra.cs" />
+        <Compile Include="Inventario.cs" />
         <Compile Include="Registro.xaml.cs">
           <DependentUpon>Registro.xaml</DependentUpon>
         </Compile>
