--- a/appExa/appExa/appExa.csproj
+++ b/appExa/appExa/appExa.csproj
@@ -52,12 +52,19 @@
         </ApplicationDefinition>
         <Compile Include="Articulo.cs" />
         <Compile Include="Compra.cs" />
+        <Compile Include="Compra.xaml.cs">
+          <DependentUpon>Compra.xaml</DependentUpon>
+        </Compile>
+        <Compile Include="Principal.xaml.cs">
+          <DependentUpon>Principal.xaml</DependentUpon>
+        </Compile>
         <Compile Include="Registro.xaml.cs">
           <DependentUpon>Registro.xaml</DependentUpon>
         </Compile>
         <Compile Include="Ventana1.xaml.cs">
           <DependentUpon>Ventana1.xaml</DependentUpon>
         </Compile>
+        <Page Include="Compra.xaml" />
         <Page Include="MainWindow.xaml">
             <Generator>MSBuild:Compile</Generator>
             <SubType>Designer</SubType>
@@ -70,6 +77,7 @@
             <DependentUpon>MainWindow.xaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
+        <Page Include="Principal.xaml" />
         <Page Include="Registro.xaml" />
         <Page Include="Ventana1.xaml" />
     </ItemGroup>
