--- a/appExa/appExa/appExa.csproj
+++ b/appExa/appExa/appExa.csproj
@@ -34,6 +34,14 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="MaterialDesignColors, Version=2.0.5.0, Culture=neutral, PublicKeyToken=df2a72020bd7962a">
+          <HintPath>..\packages\MaterialDesignColors.2.0.5-ci16-ci16\lib\net452\MaterialDesignColors.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="MaterialDesignThemes.Wpf, Version=4.4.0.0, Culture=neutral, PublicKeyToken=df2a72020bd7962a">
+          <HintPath>..\packages\MaterialDesignThemes.4.4.0-ci16-ci16\lib\net452\MaterialDesignThemes.Wpf.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
@@ -90,6 +98,17 @@
     </ItemGroup>
     <ItemGroup>
         <None Include="App.config" />
+        <None Include="packages.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Images" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Import Project="..\packages\MaterialDesignThemes.4.4.0-ci16-ci16\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.4.0-ci16-ci16\build\MaterialDesignThemes.targets')" />
+    <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+      <PropertyGroup>
+        <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+      </PropertyGroup>
+      <Error Condition="!Exists('..\packages\MaterialDesignThemes.4.4.0-ci16-ci16\build\MaterialDesignThemes.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MaterialDesignThemes.4.4.0-ci16-ci16\build\MaterialDesignThemes.targets'))" />
+    </Target>
 </Project>
