--- a/appExa/appExa/appExa.csproj
+++ b/appExa/appExa/appExa.csproj
@@ -34,6 +34,14 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="BouncyCastle.Crypto, Version=1.8.10.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+          <HintPath>..\packages\Portable.BouncyCastle.1.8.10\lib\net40\BouncyCastle.Crypto.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="MailKit, Version=3.0.0.0, Culture=neutral, PublicKeyToken=4e064fe7c44a8f1b">
+          <HintPath>..\packages\MailKit.3.0.0-preview1\lib\net47\MailKit.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="MaterialDesignColors, Version=2.0.5.0, Culture=neutral, PublicKeyToken=df2a72020bd7962a">
           <HintPath>..\packages\MaterialDesignColors.2.0.5-ci16-ci16\lib\net452\MaterialDesignColors.dll</HintPath>
           <Private>True</Private>
@@ -42,9 +50,21 @@
           <HintPath>..\packages\MaterialDesignThemes.4.4.0-ci16-ci16\lib\net452\MaterialDesignThemes.Wpf.dll</HintPath>
           <Private>True</Private>
         </Reference>
+        <Reference Include="MimeKit, Version=3.0.0.0, Culture=neutral, PublicKeyToken=bede1c8a46c66814">
+          <HintPath>..\packages\MimeKit.3.0.0-preview1\lib\net47\MimeKit.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="mscorlib" />
         <Reference Include="System" />
+        <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Data.DataSetExtensions" />
+        <Reference Include="System.Net.Http" />
+        <Reference Include="System.Security" />
         <Reference Include="System.Xml" />
         <Reference Include="System.Xaml">
             <RequiredTargetFramework>4.0</RequiredTargetFramework>
