--- a/appExa/appExa/packages.config
+++ b/appExa/appExa/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MailKit" version="3.0.0-preview1" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.5-ci16-ci16" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.4.0-ci16-ci16" targetFramework="net472" />
+  <package id="MimeKit" version="3.0.0-preview1" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
 </packages>
