--- a/appExa/appExa/appExa.csproj
+++ b/appExa/appExa/appExa.csproj
@@ -53,6 +53,7 @@
         <Compile Include="Articulo.cs" />
         <Compile Include="Compra.cs" />
         <Compile Include="Inventario.cs" />
+        <Compile Include="Pedidos.cs" />
         <Compile Include="Registro.xaml.cs">
           <DependentUpon>Registro.xaml</DependentUpon>
         </Compile>
